--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
 }
+
 h1,
 span {
   width: 400px;
@@ -8,4 +9,8 @@ span {
 
 span {
   display: inline-block;
+}
+
+h2 {
+  width: 80%;
 }
