--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ span {
   width: 400px;
 }
 
+h1 {
+  border: 1px solid blue;
+  padding: 10px 16px 24px 32px;
+}
+
 span {
   display: inline-block;
 }
