--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  color: #444444;
 }
 
 h1,
@@ -9,9 +14,13 @@ span {
 
 h1 {
   border: 1px solid blue;
-  padding: 10px 16px 24px 32px;
+  padding: 10px; /* when 4 values it goes clockwise from top-left-bot-right */
+  color: rebeccapurple;
 }
 
+a {
+  color: inherit; /* Overwrite browser default styles and inherit color from parent that has color set */
+}
 span {
   display: inline-block;
 }
