--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,11 @@
 * {
+  /* Reset default values */
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   color: #444444;
 }
 
